[package]
name = "memflow-vdm"
version = "0.1.0"
authors = ["a2x"]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/a2x/memflow-vdm"
license = "MIT"

[dependencies]
dyn-clone = "1.0"
memflow = "0.2"
thiserror = "1.0"
winreg = "0.52"

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_IO",
]
